Add col mappings creation

--- a/pdf-reader/scripts/convert_pdf.ipynb
+++ b/pdf-reader/scripts/convert_pdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +101,391 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Extracted 218 rows successfully!\n"
+      "✅ Extracted 376 rows successfully!\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Name</td>\n",
+       "      <td>Code</td>\n",
+       "      <td>Systèmes d’information</td>\n",
+       "      <td>Théorie des graphes</td>\n",
+       "      <td>Algorithmique et Structures de Données (ASD)</td>\n",
+       "      <td>Ordinateurs Architecture des (AO)</td>\n",
+       "      <td>Mathématique Logique</td>\n",
+       "      <td>Numériques Méthodes</td>\n",
+       "      <td>Langue Étrangère 2</td>\n",
+       "      <td>Moyenne UE 1</td>\n",
+       "      <td>Crédit UE 1</td>\n",
+       "      <td>Moyenne UE 2</td>\n",
+       "      <td>Crédit UE 2</td>\n",
+       "      <td>Moyenne UE 3</td>\n",
+       "      <td>Crédit UE 3</td>\n",
+       "      <td>Semestre Crédits du</td>\n",
+       "      <td>Moyenne Semestre du</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1 - ABDAOUI AYA</td>\n",
+       "      <td>212136023497</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>10.46</td>\n",
+       "      <td>09</td>\n",
+       "      <td>6.55</td>\n",
+       "      <td>8.42</td>\n",
+       "      <td>7.49</td>\n",
+       "      <td>00</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>04</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>02</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2 - ABDESMED CHOUROUK</td>\n",
+       "      <td>232336177720</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>11.84</td>\n",
+       "      <td>09</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>6.44</td>\n",
+       "      <td>00</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>11.68</td>\n",
+       "      <td>08</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3 - ABDI SAMY ZAKARIA</td>\n",
+       "      <td>222236128502</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>00</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4 - ABDOUN CELIA NOOR</td>\n",
+       "      <td>232336124105</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>05</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>5.42</td>\n",
+       "      <td>00</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>00</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>02</td>\n",
+       "      <td>07</td>\n",
+       "      <td>7.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371</th>\n",
+       "      <td>371 - ZEROUAL MOUAD</td>\n",
+       "      <td>232336152706</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>00</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>00</td>\n",
+       "      <td>4.71</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.91</td>\n",
+       "      <td>00</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>02</td>\n",
+       "      <td>02</td>\n",
+       "      <td>3.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372</th>\n",
+       "      <td>372 - ZEROUGA ARIDJ</td>\n",
+       "      <td>232336146815</td>\n",
+       "      <td>12.85</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>09</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>6.05</td>\n",
+       "      <td>5.98</td>\n",
+       "      <td>00</td>\n",
+       "      <td>12.52</td>\n",
+       "      <td>10.95</td>\n",
+       "      <td>11.74</td>\n",
+       "      <td>08</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>02</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>373 - ZIATE ABIR</td>\n",
+       "      <td>212136023755</td>\n",
+       "      <td>11.25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>00</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>00</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>02</td>\n",
+       "      <td>07</td>\n",
+       "      <td>4.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374</th>\n",
+       "      <td>374 - ZIRAOUI SARA INES</td>\n",
+       "      <td>232336130612</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>00</td>\n",
+       "      <td>00</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>375 - ZIREK ABDERRAOUF</td>\n",
+       "      <td>232336131115</td>\n",
+       "      <td>5.65</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>5.06</td>\n",
+       "      <td>00</td>\n",
+       "      <td>5.65</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>6.08</td>\n",
+       "      <td>00</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>6.15</td>\n",
+       "      <td>00</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02</td>\n",
+       "      <td>02</td>\n",
+       "      <td>6.27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>376 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          0             1                       2   \\\n",
+       "0                       Name          Code  Systèmes d’information   \n",
+       "1            1 - ABDAOUI AYA  212136023497                    13.3   \n",
+       "2      2 - ABDESMED CHOUROUK  232336177720                    13.9   \n",
+       "3      3 - ABDI SAMY ZAKARIA  222236128502                     0.0   \n",
+       "4      4 - ABDOUN CELIA NOOR  232336124105                    12.2   \n",
+       "..                       ...           ...                     ...   \n",
+       "371      371 - ZEROUAL MOUAD  232336152706                    1.65   \n",
+       "372      372 - ZEROUGA ARIDJ  232336146815                   12.85   \n",
+       "373         373 - ZIATE ABIR  212136023755                   11.25   \n",
+       "374  374 - ZIRAOUI SARA INES  232336130612                     0.0   \n",
+       "375   375 - ZIREK ABDERRAOUF  232336131115                    5.65   \n",
+       "\n",
+       "                      3                                             4   \\\n",
+       "0    Théorie des graphes  Algorithmique et Structures de Données (ASD)   \n",
+       "1                    6.2                                         10.46   \n",
+       "2                   8.75                                         11.84   \n",
+       "3                    0.0                                           0.0   \n",
+       "4                   4.07                                          8.95   \n",
+       "..                   ...                                           ...   \n",
+       "371                 3.48                                          2.38   \n",
+       "372                  7.8                                         10.83   \n",
+       "373                  0.0                                          6.75   \n",
+       "374                  0.0                                           0.0   \n",
+       "375                 4.17                                          5.06   \n",
+       "\n",
+       "                                    5                     6   \\\n",
+       "0    Ordinateurs Architecture des (AO)  Mathématique Logique   \n",
+       "1                                   09                  6.55   \n",
+       "2                                   09                  4.38   \n",
+       "3                                   00                   0.0   \n",
+       "4                                   05                  3.34   \n",
+       "..                                 ...                   ...   \n",
+       "371                                 00                   4.8   \n",
+       "372                                 09                   5.9   \n",
+       "373                                 05                   0.0   \n",
+       "374                                 00                   0.0   \n",
+       "375                                 00                  5.65   \n",
+       "\n",
+       "                      7                   8             9            10  \\\n",
+       "0    Numériques Méthodes  Langue Étrangère 2  Moyenne UE 1  Crédit UE 1   \n",
+       "1                   8.42                7.49            00         10.1   \n",
+       "2                    8.5                6.44            00        11.95   \n",
+       "3                    0.0                 0.0            00          0.0   \n",
+       "4                    7.5                5.42            00          6.6   \n",
+       "..                   ...                 ...           ...          ...   \n",
+       "371                  2.4                 3.6            00         4.71   \n",
+       "372                 6.05                5.98            00        12.52   \n",
+       "373                 1.95                0.98            00         2.57   \n",
+       "374                  0.0                 0.0            00         0.23   \n",
+       "375                  6.5                6.08            00          9.1   \n",
+       "\n",
+       "               11           12            13           14  \\\n",
+       "0    Moyenne UE 2  Crédit UE 2  Moyenne UE 3  Crédit UE 3   \n",
+       "1             8.1          9.1            04         10.0   \n",
+       "2            11.4        11.68            08         14.0   \n",
+       "3             0.0          0.0            00          0.0   \n",
+       "4             4.2          5.4            00         16.0   \n",
+       "..            ...          ...           ...          ...   \n",
+       "371           3.1         3.91            00         12.0   \n",
+       "372         10.95        11.74            08         17.0   \n",
+       "373           4.2         3.39            00         16.5   \n",
+       "374           0.0         0.12            00          0.0   \n",
+       "375           3.2         6.15            00         14.0   \n",
+       "\n",
+       "                      15                   16    17    18  \n",
+       "0    Semestre Crédits du  Moyenne Semestre du  None  None  \n",
+       "1                   10.0                   02    15  8.98  \n",
+       "2                   14.0                   02    19  9.91  \n",
+       "3                    0.0                   00    00   0.0  \n",
+       "4                   16.0                   02    07  7.18  \n",
+       "..                   ...                  ...   ...   ...  \n",
+       "371                 12.0                   02    02  3.82  \n",
+       "372                 17.0                   02    19  9.62  \n",
+       "373                 16.5                   02    07  4.36  \n",
+       "374                  0.0                   00    00  0.03  \n",
+       "375                 14.0                   02    02  6.27  \n",
+       "\n",
+       "[376 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -117,7 +493,7 @@
     "\n",
     "i = 0\n",
     "\n",
-    "file_name = \"Deliberation_2024_2025_L3_S5\"\n",
+    "file_name = \"Deliberation_2024_2025_L2_S3\"\n",
     "\n",
     "with pdfplumber.open(f\"../data/{file_name}.pdf\") as pdf:\n",
     "    for page_num, page in enumerate(pdf.pages, start=1):\n",
@@ -146,6 +522,13 @@
     "\n",
     "print(f\"✅ Extracted {len(df)} rows successfully!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
