--- a/pdf-reader/scripts/push_supabase.ipynb
+++ b/pdf-reader/scripts/push_supabase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
     "\n",
-    "file_name = \"Deliberation_2024_2025_L3_S5\"\n",
+    "file_name = \"Deliberation_2024_2025_L2_S3\"\n",
     "url: str = os.getenv(\"SUPABASE_URL\")\n",
     "key: str = os.getenv(\"SUPABASE_KEY\")\n",
     "key_llm = os.getenv(\"GOOGLE_API_KEY\")\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,23 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "sys_instruct = \"\"\"\n",
-    "You are a text formatting assistant specializing in data preparation for databases. When given an array of elements, follow these precise instructions:\n",
+    "You are a text formatting assistant specializing in data preparation for databases. When given an array of elements, follow these precise instructions:  \n",
     "\n",
-    "- Accept any array of string elements.\n",
-    "- Convert all characters to lowercase.\n",
-    "- Replace all spaces and special characters (e.g., apostrophes) with underscores (`_`).\n",
-    "- **Ensure the final output is a single, strictly comma-separated string with no spaces between elements and no trailing comma.**\n",
+    "- Accept any array of string elements.  \n",
+    "- Convert all characters to lowercase.  \n",
+    "- Replace all spaces and special characters (e.g., apostrophes, parentheses) with underscores (`_`).  \n",
+    "- Remove any characters that could make the column name invalid in a database (e.g., starting with a number, containing non-alphanumeric characters except underscores, or exceeding typical column name length limits).  \n",
+    "- Ensure column names follow standard database conventions for improved compatibility.  \n",
+    "- **Ensure the final output is a single, strictly comma-separated string with no spaces between elements and no trailing comma.**  \n",
     "\n",
-    "**Example Input:**\n",
-    "Name,Code,Compilation,Système d'exploitation 2,Moyenne UE 1,Crédit UE 1,Génie Logiciel 2,Interface Machine Homme,Moyenne UE 2,Crédit UE 2,Probabilités et Statistiques,Programmation Linéaire,Moyenne UE 3,Crédit UE 3,Economie et veille stratégique numérique,Moyenne UE 4,Crédit UE 4,Crédits du Semestre,Moyenne du Semestre\n",
+    "**Example Input:**  \n",
+    "Name,Code,Compilation,Système d'exploitation 2,Moyenne UE 1,Crédit UE 1,Génie Logiciel 2,Interface Machine (Homme),Moyenne UE 2,Crédit UE 2,Probabilités et Statistiques,Programmation (Linéaire),Moyenne UE 3,Crédit UE 3,Economie et veille stratégique numérique,Moyenne UE 4,Crédit UE 4,Crédits du Semestre,Moyenne du Semestre  \n",
     "\n",
-    "**Expected Output:**\n",
-    "`name,code,compilation,systeme_d_exploitation_2,moyenne_ue_1,credit_ue_1,genie_logiciel_2,interface_machine_homme,moyenne_ue_2,credit_ue_2,probabilites_et_statistiques,programmation_lineaire,moyenne_ue_3,credit_ue_3,economie_et_veille_strategique_numerique,moyenne_ue_4,credit_ue_4,credits_du_semestre,moyenne_du_semestre`\n",
+    "**Expected Output:**  \n",
+    "`name,code,compilation,systeme_d_exploitation_2,moyenne_ue_1,credit_ue_1,genie_logiciel_2,interface_machine_homme,moyenne_ue_2,credit_ue_2,probabilites_et_statistiques,programmation_lineaire,moyenne_ue_3,credit_ue_3,economie_et_veille_strategique_numerique,moyenne_ue_4,credit_ue_4,credits_du_semestre,moyenne_du_semestre`  \n",
     "\n",
     "Respond only with the formatted output unless otherwise instructed.\n",
     "\"\"\"\n",
@@ -89,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Name': 'name', 'Code': 'code', 'Compilation': 'compilation', \"Système d'exploitation 2\": 'systeme_d_exploitation_2', 'Moyenne UE 1': 'moyenne_ue_1', 'Crédit UE 1': 'credit_ue_1', 'Génie Logiciel 2': 'genie_logiciel_2', 'Interface Machine Homme': 'interface_machine_homme', 'Moyenne UE 2': 'moyenne_ue_2', 'Crédit UE 2': 'credit_ue_2', 'Probabilités et Statistiques': 'probabilites_et_statistiques', 'Programmation Linéaire': 'programmation_lineaire', 'Moyenne UE 3': 'moyenne_ue_3', 'Crédit UE 3': 'credit_ue_3', 'Economie et veille numérique stratégique': 'economie_et_veille_numerique_strategique', 'Moyenne UE 4': 'moyenne_ue_4', 'Crédit UE 4': 'credit_ue_4', 'Crédits du Semestre': 'credits_du_semestre', 'Moyenne du Semestre': 'moyenne_du_semestre'}\n"
+      "{'Name': 'name', 'Code': 'code', 'Systèmes d’information': 'systemes_d_information', 'Théorie des graphes': 'theorie_des_graphes', 'Moyenne UE 1': 'moyenne_ue_1', 'Crédit UE 1': 'credit_ue_1', 'Algorithmique et Structures de Données (ASD)': 'algorithmique_et_structures_de_donnees_asd', 'Architecture des Ordinateurs (AO)': 'architecture_des_ordinateurs_ao', 'Moyenne UE 2': 'moyenne_ue_2', 'Crédit UE 2': 'credit_ue_2', 'Mathématique Logique': 'mathematique_logique', 'Méthodes Numériques': 'methodes_numeriques', 'Moyenne UE 3': 'moyenne_ue_3', 'Crédit UE 3': 'credit_ue_3', 'Langue Étrangère 2': 'langue_etrangere_2', 'Moyenne UE 4': 'moyenne_ue_4', 'Crédit UE 4': 'credit_ue_4', 'Crédits du Semestre': 'credits_du_semestre', 'Moyenne du Semestre': 'moyenne_du_semestre'}\n"
      ]
     }
    ],
@@ -111,21 +113,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "CREATE TABLE IF NOT EXISTS analysis_Deliberation_2024_2025_L3_S5 (\n",
-      "    id UUID DEFAULT gen_random_uuid() PRIMARY KEY,\n",
-      "    name text, code text, compilation float8, systeme_d_exploitation_2 float8, moyenne_ue_1 float8, credit_ue_1 int8, genie_logiciel_2 float8, interface_machine_homme float8, moyenne_ue_2 float8, credit_ue_2 int8, probabilites_et_statistiques float8, programmation_lineaire float8, moyenne_ue_3 float8, credit_ue_3 int8, economie_et_veille_numerique_strategique float8, moyenne_ue_4 float8, credit_ue_4 int8, credits_du_semestre int8, moyenne_du_semestre float8\n",
-      ")\n",
-      "\n",
-      "{'name': 'text', 'code': 'text', 'compilation': 'float8', 'systeme_d_exploitation_2': 'float8', 'moyenne_ue_1': 'float8', 'credit_ue_1': 'int8', 'genie_logiciel_2': 'float8', 'interface_machine_homme': 'float8', 'moyenne_ue_2': 'float8', 'credit_ue_2': 'int8', 'probabilites_et_statistiques': 'float8', 'programmation_lineaire': 'float8', 'moyenne_ue_3': 'float8', 'credit_ue_3': 'int8', 'economie_et_veille_numerique_strategique': 'float8', 'moyenne_ue_4': 'float8', 'credit_ue_4': 'int8', 'credits_du_semestre': 'int8', 'moyenne_du_semestre': 'float8'}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>code</th>\n",
+       "      <th>systemes_d_information</th>\n",
+       "      <th>theorie_des_graphes</th>\n",
+       "      <th>moyenne_ue_1</th>\n",
+       "      <th>credit_ue_1</th>\n",
+       "      <th>algorithmique_et_structures_de_donnees_asd</th>\n",
+       "      <th>architecture_des_ordinateurs_ao</th>\n",
+       "      <th>moyenne_ue_2</th>\n",
+       "      <th>credit_ue_2</th>\n",
+       "      <th>mathematique_logique</th>\n",
+       "      <th>methodes_numeriques</th>\n",
+       "      <th>moyenne_ue_3</th>\n",
+       "      <th>credit_ue_3</th>\n",
+       "      <th>langue_etrangere_2</th>\n",
+       "      <th>moyenne_ue_4</th>\n",
+       "      <th>credit_ue_4</th>\n",
+       "      <th>credits_du_semestre</th>\n",
+       "      <th>moyenne_du_semestre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABDAOUI AYA</td>\n",
+       "      <td>212136023497</td>\n",
+       "      <td>13.30</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>10.46</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6.55</td>\n",
+       "      <td>8.42</td>\n",
+       "      <td>7.49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.10</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>9.10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ABDESMED CHOUROUK</td>\n",
+       "      <td>232336177720</td>\n",
+       "      <td>13.90</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>11.84</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>6.44</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>11.40</td>\n",
+       "      <td>11.68</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABDI SAMY ZAKARIA</td>\n",
+       "      <td>222236128502</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABDOUN CELIA NOOR</td>\n",
+       "      <td>232336124105</td>\n",
+       "      <td>12.20</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>5.42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.60</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABIDI LYNA</td>\n",
+       "      <td>232336204903</td>\n",
+       "      <td>14.15</td>\n",
+       "      <td>6.60</td>\n",
+       "      <td>11.13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>5.78</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>10.06</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9.04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                name          code  systemes_d_information  \\\n",
+       "0        ABDAOUI AYA  212136023497                   13.30   \n",
+       "1  ABDESMED CHOUROUK  232336177720                   13.90   \n",
+       "2  ABDI SAMY ZAKARIA  222236128502                    0.00   \n",
+       "3  ABDOUN CELIA NOOR  232336124105                   12.20   \n",
+       "4         ABIDI LYNA  232336204903                   14.15   \n",
+       "\n",
+       "   theorie_des_graphes  moyenne_ue_1  credit_ue_1  \\\n",
+       "0                 6.20         10.46            9   \n",
+       "1                 8.75         11.84            9   \n",
+       "2                 0.00          0.00            0   \n",
+       "3                 4.07          8.95            5   \n",
+       "4                 6.60         11.13            9   \n",
+       "\n",
+       "   algorithmique_et_structures_de_donnees_asd  \\\n",
+       "0                                        6.55   \n",
+       "1                                        4.38   \n",
+       "2                                        0.00   \n",
+       "3                                        3.34   \n",
+       "4                                        3.45   \n",
+       "\n",
+       "   architecture_des_ordinateurs_ao  moyenne_ue_2  credit_ue_2  \\\n",
+       "0                             8.42          7.49            0   \n",
+       "1                             8.50          6.44            0   \n",
+       "2                             0.00          0.00            0   \n",
+       "3                             7.50          5.42            0   \n",
+       "4                             8.10          5.78            0   \n",
+       "\n",
+       "   mathematique_logique  methodes_numeriques  moyenne_ue_3  credit_ue_3  \\\n",
+       "0                 10.10                 8.10          9.10            4   \n",
+       "1                 11.95                11.40         11.68            8   \n",
+       "2                  0.00                 0.00          0.00            0   \n",
+       "3                  6.60                 4.20          5.40            0   \n",
+       "4                 12.00                 8.12         10.06            8   \n",
+       "\n",
+       "   langue_etrangere_2  moyenne_ue_4  credit_ue_4  credits_du_semestre  \\\n",
+       "0                10.0          10.0            2                   15   \n",
+       "1                14.0          14.0            2                   19   \n",
+       "2                 0.0           0.0            0                    0   \n",
+       "3                16.0          16.0            2                    7   \n",
+       "4                14.0          14.0            2                   19   \n",
+       "\n",
+       "   moyenne_du_semestre  \n",
+       "0                 8.98  \n",
+       "1                 9.91  \n",
+       "2                 0.00  \n",
+       "3                 7.18  \n",
+       "4                 9.04  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -154,20 +355,20 @@
     "create_table_query = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {table_name} (\n",
     "    id UUID DEFAULT gen_random_uuid() PRIMARY KEY,\n",
-    "    {columns}\n",
+    "    {columns},\n",
+    "    UNIQUE(code)\n",
     ")\n",
     "\"\"\"\n",
     "\n",
     "# transforming col names\n",
     "data.columns = [mappings[col] for col in data.columns]\n",
     "\n",
-    "print(create_table_query)\n",
-    "print(dict_schema)"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +376,7 @@
      "output_type": "stream",
      "text": [
       "Connection successful!\n",
-      "Table 'analysis_Deliberation_2024_2025_L3_S5' created successfully.\n"
+      "Table 'analysis_Deliberation_2024_2025_L2_S3' created successfully.\n"
      ]
     }
    ],
@@ -203,7 +404,7 @@
     "                WHERE table_name = %s\n",
     "            );\n",
     "        \"\"\"),\n",
-    "        [table_name]\n",
+    "        [table_name.lower()]\n",
     "    )\n",
     "\n",
     "    table_exists = cursor.fetchone()[0]\n",
@@ -224,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -236,11 +437,77 @@
     }
    ],
    "source": [
-    "# inserting data\n",
     "i = 0\n",
     "records = data.to_dict(orient=\"records\")\n",
-    "response = client.table(table_name.lower()).insert(records).execute()\n",
-    "print(\"Records inserted successfully\")"
+    "\n",
+    "try:\n",
+    "    response = client.table(table_name.lower()).upsert(records).execute()\n",
+    "    print(\"Records inserted successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error inserting records: {e.message}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection successful!\n",
+      "Table 'analysis_Deliberation_2024_2025_L2_S3_mappings' created successfully.\n",
+      "Mappings inserted successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create mappings table\n",
+    "mappings_table_name = f\"{table_name}_mappings\"\n",
+    "mappings_data = [{\"name\": name, \"db_name\": mappings[name]} for name in mappings]\n",
+    "mappings_schema = {\"name\": \"text\", \"db_name\": \"text\"}\n",
+    "mappings_cols = \"name text, db_name text\"\n",
+    "create_mappings_table_query = f\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS {mappings_table_name} (\n",
+    "    id UUID DEFAULT gen_random_uuid() PRIMARY KEY,\n",
+    "    {mappings_cols},\n",
+    "    UNIQUE(db_name)\n",
+    ")\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    conn = psycopg2.connect(**conn_details)\n",
+    "    print(\"Connection successful!\")\n",
+    "\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\n",
+    "        sql.SQL(\"\"\"\n",
+    "            SELECT EXISTS (\n",
+    "                SELECT 1 FROM information_schema.tables\n",
+    "                WHERE table_name = %s\n",
+    "            );\n",
+    "        \"\"\"),\n",
+    "        [mappings_table_name.lower()]\n",
+    "    )\n",
+    "\n",
+    "    table_exists = cursor.fetchone()[0]\n",
+    "\n",
+    "    if table_exists:\n",
+    "        print(f\"Table '{mappings_table_name}' already exists.\")\n",
+    "    else:\n",
+    "        cursor.execute(create_mappings_table_query)\n",
+    "        conn.commit()\n",
+    "        print(f\"Table '{mappings_table_name}' created successfully.\")\n",
+    "\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Failed to connect or execute query: {e}\")\n",
+    "\n",
+    "response = client.table(mappings_table_name.lower()).upsert(mappings_data).execute()\n",
+    "print(\"Mappings inserted successfully\")"
    ]
   }
  ],
